# Soph1e-Ra1n-Jailbreak-a12-a13-devices-usblitter8

./: LICENSE  README.md
soph1e-ra1n/: pyproject.toml
soph1e-ra1n/device/: README.md
soph1e-ra1n/device/loader/: Info.plist  LoaderApp.swift  README.md
soph1e-ra1n/device/scripts/: build_bootstrap.sh  build_loader.sh  jailbreak.sh
soph1e-ra1n/scripts/: install.sh
soph1e-ra1n/soph1e_ra1n.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
soph1e-ra1n/soph1e_ra1n/cli/: main.py  tui.py
soph1e-ra1n/soph1e_ra1n/core/: exploit.py
soph1e-ra1n/soph1e_ra1n/gui/: app.py
