[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soph1e-ra1n"
version = "1.0.0"
description = "A12/A13 BootROM exploit + jailbreak tool (soph1e ra1n)"
readme = "README.md"
authors = [
    { name = "soph1e-ra1n contributors" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyusb>=1.2.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/prdgmshift/usbliter8"
Source = "https://github.com/prdgmshift/usbliter8"

[project.scripts]
soph1e-ra1n = "soph1e_ra1n.cli.main:main"
soph1e-ra1n-gui = "soph1e_ra1n.gui.app:main"

[tool.setuptools.packages.find]
include = ["soph1e_ra1n*"]
